Fix checkstyle for notes and javadoc

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.shape.Box?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.text.Text?>
 <fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
          title="Address App" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
   <icons>
@@ -55,6 +56,13 @@
           </padding>
           <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
         </VBox>
+
+        <HBox fx:id="statistics" styleClass="pane-with-border" alignment="TOP_RIGHT" minWidth="600" prefWidth="600" VBox.vgrow="ALWAYS">
+          <padding>
+            <Insets top="10" right="10" bottom="10" left="10" />
+          </padding>
+          <Text text="Njoy Statistics" styleClass="cell_big_label" textAlignment="CENTER"/>
+        </HBox>
 
         <HBox fx:id="notesList" styleClass="pane-with-border" alignment="TOP_RIGHT" minWidth="600" prefWidth="600" VBox.vgrow="ALWAYS">
           <padding>
