--- a/src/main/resources/view/WordBankStatisticsPanel.fxml
+++ b/src/main/resources/view/WordBankStatisticsPanel.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <ScrollPane fitToHeight="true" fitToWidth="true" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <content>
       <VBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" stylesheets="@DarkTheme.css">
@@ -71,11 +70,6 @@
             </Separator>
             <VBox prefHeight="0.0" prefWidth="100.0">
                <children>
-                  <Label fx:id="title121" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-header2" text="Progress" textAlignment="CENTER">
-                     <VBox.margin>
-                        <Insets bottom="6.0" left="16.0" top="8.0" />
-                     </VBox.margin>
-                  </Label>
                   <StackPane fx:id="progressChartPlaceholder" prefHeight="1000.0" prefWidth="200.0" />
                </children>
                <VBox.margin>
@@ -90,18 +84,30 @@
                   <Insets bottom="8.0" top="25.0" />
                </VBox.margin>
             </Separator>
-            <VBox fx:id="wrongAnswersBox" prefHeight="0.0" prefWidth="100.0">
+            <VBox fx:id="mostMissedBox" prefHeight="0.0" prefWidth="100.0">
                <children>
-                  <Label fx:id="gameFeedbackHeader" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-header2" text="Most missed" textAlignment="CENTER">
+                  <HBox prefHeight="100.0">
+                     <children>
+                        <Label fx:id="gameFeedbackHeader" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-header2" text="Hardest cards" textAlignment="CENTER" HBox.hgrow="ALWAYS">
+                           <HBox.margin>
+                              <Insets left="8.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label alignment="BOTTOM_RIGHT" styleClass="cell_big_label" stylesheets="@DarkTheme.css" text="Hit rate" textAlignment="RIGHT" HBox.hgrow="ALWAYS">
+                           <HBox.margin>
+                              <Insets top="3.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
                      <VBox.margin>
-                        <Insets bottom="6.0" left="16.0" top="8.0" />
+                        <Insets bottom="6.0" left="8.0" />
                      </VBox.margin>
-                  </Label>
-                  <StackPane fx:id="mostMissedListPlaceholder" prefHeight="0.0" prefWidth="200.0">
-                     <padding>
-                        <Insets bottom="4.0" top="4.0" />
-                     </padding>
-                  </StackPane>
+                  </HBox>
+                  <VBox fx:id="mostMissedList" prefHeight="200.0" prefWidth="0.0">
+                     <VBox.margin>
+                        <Insets left="16.0" />
+                     </VBox.margin>
+                  </VBox>
                </children>
                <VBox.margin>
                   <Insets bottom="4.0" left="8.0" right="8.0" top="4.0" />
