--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -381,8 +381,7 @@
 }
 
 /*combo box*/
-.combo-box .list-cell
-{
+.combo-box .list-cell {
     -fx-background: grey;
     -fx-background-color: transparent;
     -fx-text-fill: white;
@@ -391,20 +390,22 @@
 }
 
 
-.combo-box-popup .list-view .list-cell:filled:selected, .combo-box-popup .list-view .list-cell:filled:selected:hover
-{
+.combo-box-popup .list-view .list-cell:filled:selected, .combo-box-popup .list-view .list-cell:filled:selected:hover {
     -fx-background: -fx-accent;
     -fx-background-color: -fx-selection-bar;
     -fx-text-fill: white;
 }
 
-.combo-box-base
-{
+.combo-box-base {
     -fx-skin: "com.sun.javafx.scene.control.skin.ComboBoxBaseSkin";
     -fx-background-color: grey, grey, grey, grey;
     -fx-background-radius: 5, 5, 4, 3;
     -fx-background-insets: 0 0 -1 0, 0, 1, 2;
     -fx-padding: 0;
+}
+
+.tooltip {
+    -fx-font-size: 10pt;
 }
 
 
