--- a/src/main/resources/view/GroupDetailCard.fxml
+++ b/src/main/resources/view/GroupDetailCard.fxml
@@ -8,7 +8,7 @@
 
 <?import javafx.geometry.Insets?>
 <ScrollPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0" hbarPolicy="NEVER" vbarPolicy="NEVER">
+            prefHeight="400.0" prefWidth="600.0" hbarPolicy="NEVER" vbarPolicy="NEVER" fx:id="groupDetailCard">
     <VBox fx:id="groupDetailContainer" spacing="10">
         <VBox spacing="5">
             <padding>
