--- a/src/main/resources/view/GroupDetailsView.fxml
+++ b/src/main/resources/view/GroupDetailsView.fxml
@@ -7,16 +7,6 @@
 <?import javafx.scene.layout.*?>
 
 <StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <StackPane fx:id="groupDetailContainer" id="groupDetailContainer">
-            <GridPane>
-                <columnConstraints>
-                    <ColumnConstraints percentWidth="30"/>
-                    <ColumnConstraints percentWidth="70"/>
-                </columnConstraints>
-                <StackPane fx:id="groupDetailCard" GridPane.columnIndex="0" GridPane.rowIndex="0"></StackPane>
-                <StackPane fx:id="groupMembersList" GridPane.columnIndex="1" GridPane.rowIndex="0"></StackPane>
-                <StackPane fx:id="groupSchedule" GridPane.columnIndex="0"
-                           GridPane.rowIndex="1" GridPane.columnSpan="2"></StackPane>
-            </GridPane>
+    <StackPane fx:id="groupSchedule" id="groupSchedule">
     </StackPane>
 </StackPane>
