--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -38,14 +38,8 @@
         </MenuBar>
 
         <GridPane>
-          <VBox fx:id="personList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS"
-          GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="1" GridPane.rowSpan="2">
-            <padding>
-              <Insets top="10" right="10" bottom="10" left="10" />
-            </padding>
-<!--            <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/> !-->
-            <StackPane fx:id="sideBarPlaceholder" VBox.vgrow="ALWAYS"/>
-          </VBox>
+          <StackPane fx:id="sideBarPlaceholder" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS"
+                       GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="1" GridPane.rowSpan="2"/>
 
           <StackPane fx:id="detailsViewPlaceholder" VBox.vgrow="ALWAYS"
                       GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.columnSpan="3" GridPane.rowSpan="2"/>
