--- a/src/main/resources/view/diary/DiaryLine.fxml
+++ b/src/main/resources/view/diary/DiaryLine.fxml
@@ -5,10 +5,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
 <HBox minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox fx:id="photoCardsDisplay" maxHeight="250.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" spacing="10.0" style="-fx-background-color: transparent;" HBox.hgrow="ALWAYS">
+      <HBox fx:id="photoCardsDisplay" maxHeight="250.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" spacing="10.0" style="-fx-background-color: transparent;">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
@@ -19,7 +18,7 @@
             <Insets />
          </HBox.margin>
       </HBox>
-      <Label fx:id="lineTextLabel" contentDisplay="RIGHT" graphicTextGap="10.0" style="-fx-font-family: Segeo UI; -fx-font-size: 20; -fx-text-fill: #121420;" styleClass="diaryTextLine" text="Just some placeholder text" wrapText="true" HBox.hgrow="ALWAYS">
+      <Label fx:id="lineTextLabel" contentDisplay="RIGHT" graphicTextGap="10.0" minHeight="-Infinity" minWidth="-Infinity" style="-fx-font-family: Segeo UI; -fx-font-size: 20; -fx-text-fill: #121420;" styleClass="diaryTextLine" text="Just some placeholder text" wrapText="true" HBox.hgrow="ALWAYS">
          <font>
             <Font name="Segoe UI" size="20.0" />
          </font>
