--- a/src/main/resources/view/BudgetListCard.fxml
+++ b/src/main/resources/view/BudgetListCard.fxml
@@ -26,7 +26,9 @@
                 </Label>
                 <Label fx:id="description" text="\$description" styleClass="cell_big_label" />
             </HBox>
-            <Label fx:id="amount" text="\$amount" />
+            <HBox>
+                <Label fx:id="amount" text="\$amount" />
+            </HBox>
             <Label fx:id="criterion" styleClass="cell_small_label" text="\$criterion" />
         </VBox>
     </GridPane>
