--- a/src/main/resources/view/TransactionListCard.fxml
+++ b/src/main/resources/view/TransactionListCard.fxml
@@ -13,7 +13,7 @@
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
         </columnConstraints>
-        <VBox alignment="CENTER_LEFT" minHeight="80" GridPane.columnIndex="0">
+        <VBox alignment="CENTER_LEFT" minHeight="60" GridPane.columnIndex="0">
             <padding>
                 <Insets top="5" right="5" bottom="5" left="15" />
             </padding>
@@ -24,12 +24,21 @@
                         <Region fx:constant="USE_PREF_SIZE" />
                     </minWidth>
                 </Label>
-                <Label fx:id="description" text="\$description" styleClass="cell_big_label" />
+                <Label fx:id="description" text="\$description" styleClass="cell_big_label">
+                </Label>
+                <Region HBox.hgrow="ALWAYS" />
+                <Label fx:id="amount" styleClass="cell_big_label" text="\$amount" alignment="CENTER_RIGHT">
+                    <minWidth>
+                        <Region fx:constant="USE_PREF_SIZE" />
+                    </minWidth>
+                </Label>
             </HBox>
-            <Label fx:id="amount" text="\$amount" />
-            <Label fx:id="date" styleClass="cell_small_label" text="\$date" />
-            <Label fx:id="category" styleClass="cell_small_label" text="\$category" />
-            <Label fx:id="transactionType" styleClass="cell_small_label" text="\$transactionType" />
+
+            <HBox spacing="5" alignment="CENTER_LEFT">
+                <Label fx:id="date" styleClass="cell_small_label" />
+                <Region HBox.hgrow="ALWAYS" />
+                <Label fx:id="category" text="\$category" styleClass="cell_small_label" />
+            </HBox>
         </VBox>
     </GridPane>
 </HBox>
