--- a/src/main/resources/view/TransactionListPanel.fxml
+++ b/src/main/resources/view/TransactionListPanel.fxml
@@ -3,6 +3,9 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.Label?>
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+    <Label fx:id="transactionContextView" styleClass="cell_big_label" alignment="CENTER" prefWidth="Infinity"
+    minHeight="40" />
     <ListView fx:id="transactionListView" VBox.vgrow="ALWAYS" />
 </VBox>
