--- a/src/main/resources/view/EarningsListCard.fxml
+++ b/src/main/resources/view/EarningsListCard.fxml
@@ -24,7 +24,7 @@
                         <Region fx:constant="USE_PREF_SIZE" />
                     </minWidth>
                 </Label>
-                <Label fx:id="module" text="\$module" styleClass="cell_big_label" />
+                <Label fx:id="classId" text="\$classId" styleClass="cell_big_label" />
             </HBox>
             <Label fx:id="date" styleClass="cell_small_label" text="\$date" />
             <Label fx:id="amount" styleClass="cell_small_label" text="\$amount" />
