--- a/src/main/resources/view/IchiTheme.css
+++ b/src/main/resources/view/IchiTheme.css
@@ -173,7 +173,7 @@
 .list-cell:filled #cardPane {
     -fx-padding: 15px;
     -fx-background-color: white;
-    -fx-border-width: 1px 0 0 0;
+    -fx-border-width: 0 0 1px 0;
     -fx-border-color: #cfd8dc;
 }
 
@@ -183,6 +183,14 @@
 
 .list-cell:filled:selected .label {
     -fx-text-fill: black;
+}
+
+.list-title {
+    -fx-font-size: 18px;
+    -fx-font-weight: bold;
+    -fx-background-color: white;
+    -fx-border-width: 0 0 1px 0;
+    -fx-border-color: #cfd8dc;
 }
 
 .cell_big_label {
