--- a/src/main/resources/view/TransactionListPanel.fxml
+++ b/src/main/resources/view/TransactionListPanel.fxml
@@ -4,8 +4,13 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <Label fx:id="transactionContextView" styleClass="cell_big_label" alignment="CENTER" prefWidth="Infinity"
-    minHeight="40" />
+    <HBox minHeight="40" styleClass="list-title">
+        <Region HBox.hgrow="ALWAYS" />
+        <Label fx:id="transactionContextView" alignment="CENTER" minHeight="40"  />
+        <Region HBox.hgrow="ALWAYS" />
+    </HBox>
     <ListView fx:id="transactionListView" VBox.vgrow="ALWAYS" />
 </VBox>
