--- a/src/main/resources/view/CommandBox.fxml
+++ b/src/main/resources/view/CommandBox.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import seedu.address.ui.AutoCompleteTextField?>
+<?import seedu.address.ui.AutocorrectTextField?>
 <?import javafx.scene.layout.StackPane?>
 
 
 <StackPane styleClass="stack-pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-  <AutoCompleteTextField fx:id="commandTextField" onAction="#handleCommandEntered" promptText="Enter command here..."/>
+  <AutocorrectTextField fx:id="commandTextField" onAction="#handleCommandEntered" promptText="Enter command here..."/>
 </StackPane>
 
