--- a/src/main/resources/view/CommandBox.fxml
+++ b/src/main/resources/view/CommandBox.fxml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.StackPane?>
 
-<StackPane styleClass="stack-pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-  <TextField fx:id="commandTextField" onAction="#handleCommandEntered" promptText="Enter command here..."/>
+<StackPane prefHeight="0.0" prefWidth="1077.0" styleClass="stack-pane" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <VBox prefHeight="0.0" prefWidth="1077.0">
+         <children>
+            <HBox prefHeight="30.0" prefWidth="1077.0">
+               <children>
+                  <VBox prefHeight="100.0" prefWidth="234.0">
+                     <children>
+                        <Label text="Mode" />
+                        <ComboBox fx:id="commandComboField" prefWidth="150.0" promptText="settings" stylesheets="@DarkTheme.css" />
+                     </children>
+                  </VBox>
+                 <TextField fx:id="commandTextField" onAction="#handleCommandEntered" prefHeight="40.0" prefWidth="1017.0" promptText="Enter command here..." text="setting" HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
+            <MenuBar fx:id="commandMenuField" prefHeight="3.0" prefWidth="1077.0">
+              <menus>
+                <Menu mnemonicParsing="false" text="Help" />
+              </menus>
+            </MenuBar>
+         </children>
+      </VBox>
+   </children>
 </StackPane>
-
