--- a/src/main/resources/view/ItineraryWindow.fxml
+++ b/src/main/resources/view/ItineraryWindow.fxml
@@ -1,42 +1,138 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import java.net.URL?>
 
-<VBox fx:id="itineraryPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="itineraryPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <MenuBar fx:id="menuBar" prefHeight="17.0" prefWidth="440.0" BorderPane.alignment="CENTER">
+         <Menu mnemonicParsing="false" text="Itinerary">
+            <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
+         </Menu>
+      </MenuBar>
+   </top>
    <stylesheets>
       <URL value="@DarkTheme.css" />
       <URL value="@Extensions.css" />
    </stylesheets>
-   <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
-      <Menu mnemonicParsing="false" text="Itinerary">
-         <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
-      </Menu>
-   </MenuBar>
-
-   <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
-      <padding>
-         <Insets bottom="5" left="10" right="10" top="5" />
-      </padding>
-   </StackPane>
-
-   <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" minHeight="100" prefHeight="100" styleClass="pane-with-border" VBox.vgrow="NEVER">
-      <padding>
-         <Insets bottom="5" left="10" right="10" top="5" />
-      </padding>
-   </StackPane>
-
-   <VBox fx:id="eventList" minWidth="340" prefWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
-      <padding>
-         <Insets bottom="10" left="10" right="10" top="10" />
-      </padding>
-      <StackPane fx:id="eventPlaceHolder" VBox.vgrow="ALWAYS" />
-   </VBox>
-
-   <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
-</VBox>
+   <bottom>
+   
+                                    <StackPane fx:id="statusbarPlaceholder" BorderPane.alignment="CENTER" />
+   </bottom>
+   <center>
+      <VBox BorderPane.alignment="CENTER">
+         <stylesheets>
+            <URL value="@DarkTheme.css" />
+            <URL value="@Extensions.css" />
+         </stylesheets>
+      
+                                       <VBox fx:id="eventList" minWidth="340" prefWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
+            <padding>
+               <Insets bottom="10" left="10" right="10" top="10" />
+            </padding>
+            <StackPane fx:id="eventPlaceHolder" VBox.vgrow="ALWAYS" />
+         </VBox>
+      
+                                 <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" minHeight="100" prefHeight="100" styleClass="pane-with-border" VBox.vgrow="NEVER">
+            <padding>
+               <Insets bottom="5" left="10" right="10" top="5" />
+            </padding>
+         </StackPane>
+      
+                                    <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+            <padding>
+               <Insets bottom="5" left="10" right="10" top="5" />
+            </padding>
+         </StackPane>
+      </VBox>
+   </center>
+   <left>
+      <VBox prefHeight="650.0" prefWidth="200.0" style="-fx-background-color: darkslategrey; -fx-alignment: center;" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/travezylogo.png" />
+               </image>
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
+            </ImageView>
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="175.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" text="Address" textFill="WHITE">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/phone.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="175.0" style="-fx-background-radius: 10; -fx-border-radius: 10;" text="Finances">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/finance.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="175.0" style="-fx-background-radius: 10; -fx-border-radius: 10;" text="Calendar">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/calendar_emoji.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="175.0" style="-fx-background-radius: 10; -fx-border-radius: 10;" text="Diary">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/diary.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="175.0" style="-fx-background-radius: 10; -fx-border-radius: 10;" text="Itinerary">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/itinerary.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="175.0" style="-fx-background-radius: 10; -fx-border-radius: 10;" text="Achievements">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/achievement.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+         </children>
+      </VBox>
+   </left>
+</BorderPane>
