--- a/src/main/resources/view/SummaryCommandWindow.fxml
+++ b/src/main/resources/view/SummaryCommandWindow.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Pagination?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.SplitMenuButton?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
 <fx:root resizable="false" title="Summary" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
@@ -14,21 +21,24 @@
   </icons>
   <scene>
     <Scene>
-         <HBox alignment="CENTER">
+         <VBox>
             <children>
-               <Label fx:id="summaryMessage" text="Label">
-                  <HBox.margin>
-                     <Insets right="5.0" />
-                  </HBox.margin>
-               </Label>
+               <Label fx:id="summaryMessage" text="Label" />
+               <ScrollBar orientation="VERTICAL" />
+               <ProgressBar prefWidth="200.0" progress="0.0" />
+               <Slider />
+               <Separator prefWidth="200.0" />
+               <Spinner />
+               <SplitMenuButton mnemonicParsing="false" text="SplitMenuButton">
+                 <items>
+                   <MenuItem mnemonicParsing="false" text="Action 1" />
+                   <MenuItem mnemonicParsing="false" text="Action 2" />
+                 </items>
+               </SplitMenuButton>
+               <ToggleButton mnemonicParsing="false" text="ToggleButton" />
+               <Pagination pageCount="3" prefHeight="200.0" prefWidth="200.0" />
             </children>
-            <opaqueInsets>
-               <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
-            </opaqueInsets>
-            <padding>
-               <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
-            </padding>
-         </HBox>
+         </VBox>
     </Scene>
   </scene>
 </fx:root>
