--- a/src/main/resources/view/DetailsTabPane.fxml
+++ b/src/main/resources/view/DetailsTabPane.fxml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.control.TabPane?>
 <AnchorPane fx:id="detailsTabPanePlaceholder" xmlns:fx="http://javafx.com/fxml/1">
+  <TabPane AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+           minHeight="360.0" minWidth="300.0" side="TOP" tabClosingPolicy="UNAVAILABLE" fx:id="tabsPlaceholder" />
 </AnchorPane>
